--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@rainbow-me/rainbowkit": "^2.2.8",
     "@tabler/icons-react": "^3.34.0",
+    "@tanstack/react-query": "^5.85.2",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -49,6 +51,8 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
+    "viem": "^2.33.3",
+    "wagmi": "^2.16.3",
     "zod": "^3.25.64"
   },
   "devDependencies": {
