--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.16",
     "lucide-react": "^0.515.0",
     "next": "^15.4.1",
     "next-themes": "^0.4.6",
