--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 NEXT_PUBLIC_API_URL=
 NEXT_PUBLIC_CLOUDFRONT_BASEURL=
 NEXT_PUBLIC_CLOUDFRONT=
+NEXT_PUBLIC_AITA_SUBGRAPH=
 
 NEXT_PUBLIC_RPC_URL_ARBITRUM=
 NEXT_PUBLIC_RPC_URL_ARBITRUM_SEPOLIA=
@@ -11,7 +12,6 @@ NEXT_PUBLIC_REOWN_ID=
 
 NEXT_PUBLIC_HYPERLIQUID_API_URL=
 NEXT_PUBLIC_HYPERLIQUID_URL=
-
 
 ## Contracts
 NEXT_PUBLIC_AGENT_FACTORY=
