--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.5",
     "@hookform/resolvers": "^5.1.1",
     "@nktkas/hyperliquid": "^0.22.1",
     "@radix-ui/react-accordion": "^1.2.11",
