--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ NEXT_PUBLIC_CLOUDFRONT_BASEURL=
 NEXT_PUBLIC_CLOUDFRONT=
 NEXT_PUBLIC_AITA_SUBGRAPH=
 
+NEXT_PUBLIC_RPC_URL_ETHEREUM=
+NEXT_PUBLIC_RPC_URL_SEPOLIA=
 NEXT_PUBLIC_RPC_URL_ARBITRUM=
 NEXT_PUBLIC_RPC_URL_ARBITRUM_SEPOLIA=
 NEXT_PUBLIC_REOWN_ID=
@@ -33,3 +35,5 @@ NEXT_PUBLIC_UNISWAP_FACTORY=
 
 ## Server-only 
 AITA_ALCHEMY_API_KEY=
+
+NEXT_PUBLIC_ENV=development
